--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-  <h3>Train a Neural Network to distinguish between class A, B and C and play a sine wave at different frequencies based upon the class.</h3>
+  <h3>Train a Neural Network to distinguish between class A, B and C and play an oscillator at different frequencies based upon the class.</h3>
   <div id="videoContainer"></div>
   <h6><span id="modelStatus">Loading base model...</span> | <span id="videoStatus">Loading video...</span></h6>
   <p>
